--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DevPins">
-        <activity android:name=".LoginActivity" android:label="Login"></activity>
+        <activity
+            android:name=".HomeActivity"
+            android:label="@string/title_activity_home"
+            android:theme="@style/Theme.DevPins.NoActionBar"></activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="Login" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
