--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DevPins">
+        <activity android:name=".UpdatePinActivity"></activity>
+        <activity android:name=".CreatePinActivity" />
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
-            android:theme="@style/Theme.DevPins.NoActionBar"></activity>
+            android:theme="@style/Theme.DevPins.NoActionBar" />
         <activity
             android:name=".LoginActivity"
             android:label="Login" />
