--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="es.ucm.fdi.devpins">
 
+    <queries>
+        <intent>
+            <action android:name="com.google.android.youtube.api.service.START" />
+        </intent>
+    </queries>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DevPins">
-        <activity android:name=".UpdatePinActivity"></activity>
+        <activity android:name=".YoutubeActivity"></activity>
+        <activity android:name=".UpdatePinActivity" />
         <activity android:name=".CreatePinActivity" />
         <activity
             android:name=".HomeActivity"
