--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,19 @@
     </queries>
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DevPins">
-        <activity android:name=".YoutubeActivity"></activity>
+        android:theme="@style/Theme.DevPins"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".PodActivity"></activity>
+        <activity android:name=".YoutubeActivity" />
         <activity android:name=".UpdatePinActivity" />
         <activity android:name=".CreatePinActivity" />
         <activity
